--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GROUP=com.uber.nullaway
+GROUP=ucr.uber.nullaway
 VERSION_NAME=0.9.3-SNAPSHOT
 
 POM_DESCRIPTION=A fast annotation-based null checker for Java
